--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "axios": "^0.27.2",
+    "chart.js": "^3.7.1",
     "ethers": "^5.6.6",
     "framer-motion": "^6.3.3",
     "millify": "^4.0.0",
     "next": "12.1.6",
     "react": "18.1.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
     "wagmi": "^0.3.5"
