--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["chakra", "Klaytn"]
+  "cSpell.words": [
+    "chakra",
+    "claimswap",
+    "healt",
+    "Klaytn",
+    "Pooltable",
+    "Tokentable"
+  ]
 }
