--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^3.7.1",
     "ethers": "^5.6.6",
     "framer-motion": "^6.3.3",
+    "human-format": "^1.0.0",
     "millify": "^4.0.0",
     "next": "12.1.6",
     "react": "18.1.0",
