--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "axios": "^0.27.2",
-    "chart.js": "^3.7.1",
+    "chart.js": "^3.9.1",
     "ethers": "^5.6.6",
     "framer-motion": "^6.3.3",
     "human-format": "^1.0.0",
     "millify": "^4.0.0",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-chartjs-2": "^4.1.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
+    "recharts": "^2.1.16",
     "wagmi": "^0.3.5"
   },
   "devDependencies": {
