--- a/package.json
+++ b/package.json
@@ -11,20 +11,26 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.0",
     "@chakra-ui/react": "^2.0.0",
-    "@emotion/react": "^11.9.0",
+    "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.8.1",
+    "@mantine/core": "^5.9.3",
+    "@mantine/hooks": "^5.9.3",
+    "@tabler/icons": "^1.112.0",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
     "ethers": "^5.6.6",
     "framer-motion": "^6.3.3",
     "human-format": "^1.0.0",
     "millify": "^4.0.0",
+    "moment": "^2.29.4",
     "next": "12.1.6",
+    "numbro": "^2.3.6",
     "react": "18.1.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
     "recharts": "^2.1.16",
+    "uuid": "^9.0.0",
     "wagmi": "^0.3.5"
   },
   "devDependencies": {
